Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1091,9 +1091,9 @@
 
             try {
                 // Replace with your Google Apps Script Web App URL
-                const GOOGLE_SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+                const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw2u51t_x-A4sxmqcwERvnllp3WVZERfUDF0s6_HjrTnd-vSvylS-YlkFq6A4qnci7q/exec';
                 
-                if (GOOGLE_SCRIPT_URL === 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE') {
+                if (GOOGLE_SCRIPT_URL === 'https://script.google.com/macros/s/AKfycbw2u51t_x-A4sxmqcwERvnllp3WVZERfUDF0s6_HjrTnd-vSvylS-YlkFq6A4qnci7q/exec') {
                     // Demo mode - just proceed without sending
                     console.log('Demo mode - data would be sent:', sheetData);
                     setTimeout(() => {
@@ -1138,3 +1138,4 @@
     </script>
 </body>
 </html>
+
