Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
             // ---------------------------------------------------------
 
             // Check se l'utente ha inserito l'URL
-            if (GOOGLE_SCRIPT_URL === ''YOUR_GOOGLE_APPS_SCRIPT_URL_HERE'') {
+            if (GOOGLE_SCRIPT_URL === ''https://script.google.com/macros/s/AKfycbyjO0tvG6y1PEm_72AAVYO8qiCZVM8rnQp1Vf2BIYfTQwqrMlUrp8pBPUCXo_R9JnmM/exec') {
                 alert("ATTENZIONE: Non hai ancora collegato il database.\n\nDevi completare il Passo 3 della guida e incollare l'URL dello script alla riga 795 del codice HTML.");
                 return;
             }
@@ -1136,6 +1136,7 @@
     </script>
 </body>
 </html>
+
 
 
 
