Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -826,9 +826,9 @@
     </div>
 
     <script>
-        // ===== GOOGLE APPS SCRIPT URL =====
+        // =====  APPS SCRIPT URL =====
         // Replace with your Google Apps Script Web App URL
-        const GOOGLE_SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxh6xZuIfQ0M43kMiTkiel10KAiWclVP7iRp1r5qfEKjSFdKGiCOdCNCS9h_5K_r16d/exec';
         // ==================================
 
         // Form data storage
@@ -1178,3 +1178,4 @@
     </script>
 </body>
 </html>
+
