Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
     <script>
         // ===== GOOGLE APPS SCRIPT URL =====
         // Replace with your Google Apps Script Web App URL
-        const GOOGLE_SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwNvMSlvMCIDnYjqkFd4VahtWA1CwM_c0zmBJn9yFAHBYkHkLPhXy1JHnMFy-c5QXe7/exec';
         // ==================================
 
         // Form data storage
@@ -1203,3 +1203,4 @@
     </script>
 </body>
 </html>
+
