Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
                 directorCompanyName: formData.directorCompanyName || '',
                 networkName: formData.networkName || '',
                 professionalCompanyName: formData.professionalCompanyName || '',
-                declaration: formData.investorType === 'HNWI' ? formData.hnwiDeclaration : formData.sophisticatedDeclaration
+                declaration: formData.investorType === 'HNWI' ? formData.hnwiDeclaration : formData.sophisticatedDeclaration,
                 id: 'APP-' + Math.random().toString(36).substring(2, 8).toUpperCase()
             };
 
@@ -1204,5 +1204,6 @@
     </script>
 </body>
 </html>
+
 
 
